Minor bugs removed Improved design

--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -21,8 +21,9 @@
             app:popupTheme="@style/MenuStyle">
 
             <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:civ_border="false"
                 android:id="@+id/profile_image"/>
 
             <TextView
