--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
     android:layout_height="wrap_content">
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
+        app:civ_border="false"
         android:id="@+id/profile_image"
         android:src="@mipmap/ic_launcher" />
 
