--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -5,16 +5,21 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.UsersFragment">
 
-  <EditText
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-    android:id="@+id/search_users"
-    android:layout_margin="5dp"
-    android:hint="Search...." />
-  <androidx.recyclerview.widget.RecyclerView
-      android:layout_below="@+id/search_users"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/recycler_view"/>
+    <EditText
+        android:id="@+id/search_users"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@drawable/background_search"
+        android:hint="Search...."
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/search_users"
+        />
 
 </RelativeLayout>
