--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -2,58 +2,75 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/profile_image"
-        android:src="@mipmap/ic_launcher" />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/layout_user"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="username"
-        android:id="@+id/username"
-        android:layout_toEndOf="@+id/profile_image"
-        android:layout_marginStart="10dp"
-        android:layout_centerVertical="true"
-        android:textSize="16sp"/>
+        android:padding="10dp">
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/profile_image"
+            android:layout_centerVertical="true"
+            app:civ_border="false"
+            android:src="@mipmap/ic_launcher" />
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        app:civ_border_width="10dp"
-        app:civ_border_color="#05df29"
-        android:id="@+id/img_on"
-        android:visibility="gone"
-        android:src="@mipmap/ic_launcher"
-        android:layout_below="@+id/username"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="-15dp"
-        android:layout_toEndOf="@+id/profile_image"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="username"
+            android:id="@+id/username"
+            android:layout_toEndOf="@+id/profile_image"
+            android:layout_marginStart="10dp"
+            android:layout_centerVertical="true"
+            android:textSize="18sp"/>
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        app:civ_border_width="10dp"
-        app:civ_border_color="#bfbfbf"
-        android:id="@+id/img_off"
-        android:visibility="gone"
-        android:src="@mipmap/ic_launcher"
-        android:layout_below="@+id/username"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="-15dp"
-        android:layout_toEndOf="@+id/profile_image"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/username"
-        android:layout_toEndOf="@+id/profile_image"
-        android:layout_marginTop="15dp"
-        android:id="@+id/last_msg"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_marginStart="15dp"
-        android:maxLines="1"/>
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            app:civ_border_width="10dp"
+            app:civ_border_color="#05df29"
+            android:id="@+id/img_on"
+            android:visibility="gone"
+            android:src="@mipmap/ic_launcher"
+            android:layout_below="@+id/username"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="-15dp"
+            android:layout_toEndOf="@+id/profile_image"/>
+
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            app:civ_border_width="10dp"
+            app:civ_border_color="#bfbfbf"
+            android:id="@+id/img_off"
+            android:visibility="gone"
+            android:src="@mipmap/ic_launcher"
+            android:layout_below="@+id/username"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="-15dp"
+            android:layout_toEndOf="@+id/profile_image"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username"
+            android:layout_toEndOf="@+id/profile_image"
+            android:layout_marginTop="20dp"
+            android:id="@+id/last_msg"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginStart="15dp"
+            android:maxLines="1"/>
+    </RelativeLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@drawable/background_hr"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
+        android:layout_below="@+id/layout_user"/>
+    
+    
+
 </RelativeLayout>
