--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#379898</color>
     <color name="colorPrimaryDark">#226e6e</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorLightGrey">#d3d3d3</color>
+    <color name="colorDarkGrey">#787878</color>
 </resources>
