--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -36,5 +36,19 @@
             android:layout_below="@+id/show_msg"
             android:layout_alignParentEnd="true"/>
 
+        <ImageView
+            android:id="@+id/sent_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="fitXY"
+            android:layout_alignParentEnd="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_image_seen"
+            android:layout_below="@+id/sent_image"
+            android:layout_alignParentEnd="true"/>
+
     </RelativeLayout>
 </RelativeLayout>
