--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -54,13 +54,22 @@
         android:background="@android:color/white"
         android:layout_alignParentBottom="true">
 
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/btn_select_image"
+            android:background="@drawable/ic_baseline_attach_file_24"
+            android:layout_alignParentStart="true" />
+
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/text_send"
             android:background="@android:color/transparent"
             android:hint="Type a message..."
-            android:layout_toLeftOf="@+id/btn_send"
+            android:layout_toStartOf="@+id/btn_send"
+            android:layout_toEndOf="@id/btn_select_image"
             android:layout_centerVertical="true"/>
 
         <ImageButton
